# Games-Engineering

./: CMakeLists.txt  README.md
pong/: pong.cpp
practical_1/: main.cpp
spaceinvaders/: main.cpp
